<resources>
    <string name="app_name" translatable="false">Warhawk Reborn</string>
    <string name="warhawk_logo">Warhawk logo</string>
    <string name="app_copyright_message">Ⓒ2019, Dominik Thalhammer, https://thalhammer.it</string>

    <string name="main_update_available">Update available</string>

    <string name="nav_start_playing">Start playing</string>
    <string name="nav_host_server">Host a server</string>
    <string name="nav_app_log">Debug log</string>
    <string name="nav_server_list">Server list</string>
    <string name="nav_preferences">Preferences</string>

    <string name="fragment_log_log_output">Log output:</string>

    <string name="fragment_host_description">Hosting is not yet implemented.</string>
    <string name="fragment_host_no_server_found">Could not find any active servers. Make sure your PS3 is turned on and
        hosting a LAN-Mode game.
    </string>
    <string name="fragment_host_searching">Looking for active warhawk servers on the network:</string>

    <string name="fragment_host_server_setting_up">Setting up server configuration for PS3 on IP %1$s</string>
    <string name="fragment_host_server_upnp_failed">UPNP setup failed.\nPlease create a port forward in your
        router:\nExternal Port: 10029\nInternal Port 10029\nInternal IP: %1$s\nType: UDP
    </string>
    <string name="fragment_host_server_waiting">Waiting for host to become available, sleeping 30 seconds.</string>
    <string name="fragment_host_server_adding">Host is online, adding to registry</string>
    <string name="fragment_host_server_api_request_failed">Failed to add host to registry :(\nAPI Request failed
    </string>
    <string name="fragment_host_server_api_failed">Failed to add host to registry :(\n%1$s</string>
    <string name="fragment_host_server_added">Added server %1$s to registry.\nIt should show up in the server list!
    </string>
    <string name="fragment_host_server_searching_gateway">Searching for gateway...</string>
    <string name="fragment_host_server_no_gateway">No gateway found :(</string>
    <string name="fragment_host_server_using_gateway">Using gateway: %1$s(%2$s)</string>
    <string name="fragment_host_server_no_active_gateway">No active gateway device found :(</string>
    <string name="fragment_host_server_mapping_success">Mapping SUCCESSFUL.</string>
    <string name="fragment_host_server_mapping_failed">Failed to create port mapping.</string>

    <string name="fragment_main_menu_reload">Reload</string>
    <string name="fragment_main_status_contentDescription">Service status</string>

    <string name="fragment_server_list_currently_active_servers">Currently active servers:</string>

    <string name="fragment_server_detail_mode">Mode:</string>
    <string name="fragment_server_detail_map">Map:</string>
    <string name="fragment_server_detail_maxplayers">Maximum players:</string>
    <string name="fragment_server_detail_minplayers">Minimum players:</string>
    <string name="fragment_server_detail_currentplayers">Current players:</string>
    <string name="fragment_server_detail_timelimit">Time limit:</string>
    <string name="fragment_server_detail_timeelapsed">Time elapsed:</string>
    <string name="fragment_server_detail_startwait">Start waittime:</string>
    <string name="fragment_server_detail_spawnwait">Spawn waittime:</string>
    <string name="fragment_server_detail_roundsplayed">Rounds played:</string>
    <string name="fragment_server_detail_pointlimit">Point limit:</string>
    <string name="fragment_server_detail_currentpoints">Current points:</string>
    <string name="fragment_server_list_menu_reload">Reload</string>
    <string name="fragment_host_retry">Retry</string>

    <string name="fragment_main_no_wifi">Looks like you are not connected to wifi. Make sure WIFI is turned on and
        connected.
    </string>


    <string name="pref_fcm_id" translatable="false">fcm_id</string>
    <string name="nav_privacy_policy">Privacy Policy</string>

    <string name="responder_thread_local_ip">"Local address: %1$s"</string>
    <string name="responder_thread_socket_not_bound">Serversocket is not bound :(</string>
    <string name="responder_thread_thread_crashed">Responderthread crashed:</string>
    <string name="responder_exited">Responder exited</string>
    <string name="responder_downloading_list">Downloading server list...</string>
    <string name="responder_could_not_download">Could not download server list.\nMake sure you have an active internet
        connection.
    </string>
    <string name="responder_found_n_servers">Found %1$d servers</string>
    <string name="responder_broadcasting_n_servers">Broadcasting %1$d servers\nGo to your PS3 and search for local
        games!
    </string>
    <string name="responder_ok_no_servers">Startup ok, but no servers are online :(</string>
    <string name="responder_received_server_request">Received server request from %1$s</string>
    <string name="responder_no_serverlist">No serverlist available!!!\n</string>


    <string name="preferences_night_mode_on">Enabled</string>
    <string name="preferences_night_mode_off">Disabled</string>
    <string name="preferences_night_mode_os_default">OS default</string>
    <string name="preferences_title_night_mode_preference">Nightmode</string>

    <string name="server_channel_name">Servernotification</string>
    <string name="server_channel_description">Notifications related to a server you host</string>
    <string name="default_channel_name">Standard</string>
    <string name="default_channel_description">Normal notifications for things like events or news</string>

    <string name="shutdown_popup_header">Warhawk Reborn will change</string>
    <string name="shutdown_popup_description">We brought back the original online mode, including stats, trophies and rankings. All while removing the need to use an app.\nBecause of this Warhawk Reborn will cease to exist in the way it currently does.</string>
    <string name="shutdown_popup_showweb">Show me the new way</string>
    <string name="shutdown_popup_later">Later</string>
</resources>
