<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragment.HostFragment"
              android:padding="@dimen/fragment_padding"
              android:orientation="vertical">

    <TextView
            android:text="@string/fragment_host_searching"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_host_no_server_found"
            android:visibility="gone">
        <TextView
                android:text="@string/fragment_host_no_server_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
        <Button
                android:text="@string/fragment_host_retry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_host_retry"/>
    </LinearLayout>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_host_pb_search"/>
    <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_host_list"/>
</LinearLayout>